[package]
authors = ["KILT <info@kilt.io>"]
build = "build.rs"
description = "KILT parachain"
edition = "2021"
name = "kilt-parachain"
version = "1.7.5"

[[bin]]
name = "kilt-parachain"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}

[dependencies]

# Internal dependencies
clone-runtime = {path = "../../runtimes/clone"}
node-common = {path = "../common"}
peregrine-runtime = {path = "../../runtimes/peregrine"}
runtime-common = {path = "../../runtimes/common"}
spiritnet-runtime = {path = "../../runtimes/spiritnet"}

# External dependencies
clap = {version = "3.2.20", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.1.5"}
derive_more = "0.99.17"
futures = {version = "0.3.21", features = ["compat"]}
hex-literal = "0.3.4"
jsonrpsee = {version = "0.15.1", features = ["server"]}
log = "0.4.17"
parking_lot = "0.12.1"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.83"

# Substrate dependencies
frame-rpc-system = {package = "substrate-frame-rpc-system", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-chain-spec = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-cli = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.29"}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-executor = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.29"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-service = {git = "https://github.com/paritytech/substrate", features = ["wasmtime"], branch = "polkadot-v0.9.29"}
sc-sysinfo = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-tracing = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-offchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-session = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
sp-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
substrate-prometheus-endpoint = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}

# Cumulus dependencies
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-client-collator = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-client-network = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-client-service = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}
cumulus-relay-chain-rpc-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.29"}

# Polkadot dependencies
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29"}
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29"}
xcm = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.29"}

# Benchmarking
frame-benchmarking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29"}

# Runtime tests
try-runtime-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.29", optional = true}

[features]
default = []
fast-gov = [
  "peregrine-runtime/fast-gov",
  "runtime-common/fast-gov",
]
runtime-benchmarks = [
  "polkadot-service/runtime-benchmarks",
  "peregrine-runtime/runtime-benchmarks",
  "spiritnet-runtime/runtime-benchmarks",
]
try-runtime = [
  "peregrine-runtime/try-runtime",
  "spiritnet-runtime/try-runtime",
  "try-runtime-cli",
]
