cargo-features = ["workspace-inheritance"]

[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "mashnet-node"
description = "Client for KILT standalone development chain."
build = "build.rs"

[[bin]]
name = "mashnet-node"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils.workspace = true

[dependencies]
# External dependencies
clap = {workspace = true, features = ["derive"]}
jsonrpsee = {workspace = true, features = ["server"]}

# Internal dependencies
mashnet-node-runtime = {workspace = true, features = ["std"]}
runtime-common = {workspace = true, features = ["std"]}

# Substrate dependencies
frame-system = {workspace = true, features = ["std"]}
pallet-transaction-payment = {workspace = true, features = ["std"]}
sc-basic-authorship.workspace = true
sc-cli = {workspace = true, features = ["wasmtime"]}
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-executor = {workspace = true, features = ["wasmtime"]}
sc-finality-grandpa.workspace = true
sc-keystore.workspace = true
sc-service = {workspace = true, features = ["wasmtime"]}
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true
sp-api = {workspace = true, features = ["std"]}
sp-block-builder = {workspace = true, features = ["std"]}
sp-blockchain.workspace = true
sp-consensus.workspace = true
sp-consensus-aura = {workspace = true, features = ["std"]}
sp-core = {workspace = true, features = ["std"]}
sp-finality-grandpa = {workspace = true, features = ["std"]}
sp-inherents = {workspace = true, features = ["std"]}
sp-keyring.workspace = true
sp-runtime = {workspace = true, features = ["std"]}
sp-timestamp = {workspace = true, features = ["std"]}

# RPC related dependencies
pallet-transaction-payment-rpc.workspace = true
sc-rpc-api.workspace = true
substrate-frame-rpc-system.workspace = true

# Benchmarking
frame-benchmarking = {workspace = true, features = ["std"]}
frame-benchmarking-cli.workspace = true

# Runtime tests
try-runtime-cli = {workspace = true, optional = true}

[features]
default = []
runtime-benchmarks = [
  "mashnet-node-runtime/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
]
try-runtime = [
  "mashnet-node-runtime/try-runtime",
  "try-runtime-cli",
]
