[package]
authors       = { workspace = true }
build         = "build.rs"
description   = "Client for KILT standalone development chain."
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license-file  = { workspace = true }
name          = "standalone-node"
readme        = { workspace = true }
repository    = { workspace = true }
version       = { workspace = true }

[[bin]]
name = "standalone-node"
path = "src/main.rs"

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[dependencies]
# External dependencies
clap        = { workspace = true, features = ["derive"] }
futures     = { workspace = true, features = ["thread-pool"] }
hex-literal = { workspace = true }
jsonrpsee   = { workspace = true, features = ["server"] }

# Internal dependencies
kestrel-runtime = { workspace = true, features = ["std"] }
runtime-common  = { workspace = true, features = ["std"] }

# Substrate dependencies
frame-system               = { workspace = true, features = ["std"] }
pallet-transaction-payment = { workspace = true, features = ["std"] }
sc-basic-authorship        = { workspace = true }
sc-cli                     = { workspace = true }
sc-client-api              = { workspace = true }
sc-consensus               = { workspace = true }
sc-consensus-aura          = { workspace = true }
sc-consensus-grandpa       = { workspace = true }
sc-executor                = { workspace = true }
sc-keystore                = { workspace = true }
sc-network                 = { workspace = true }
sc-offchain                = { workspace = true }
sc-service                 = { workspace = true }
sc-telemetry               = { workspace = true }
sc-transaction-pool        = { workspace = true }
sc-transaction-pool-api    = { workspace = true }
sp-api                     = { workspace = true, features = ["std"] }
sp-block-builder           = { workspace = true, features = ["std"] }
sp-blockchain              = { workspace = true }
sp-consensus-aura          = { workspace = true, features = ["std"] }
sp-consensus-grandpa       = { workspace = true, features = ["std"] }
sp-core                    = { workspace = true, features = ["std"] }
sp-inherents               = { workspace = true, features = ["std"] }
sp-io                      = { workspace = true, features = ["std"] }
sp-keyring                 = { workspace = true }
sp-runtime                 = { workspace = true, features = ["std"] }
sp-timestamp               = { workspace = true, features = ["std"] }

# RPC related dependencies
pallet-transaction-payment-rpc = { workspace = true }
sc-rpc-api                     = { workspace = true }
substrate-frame-rpc-system     = { workspace = true }

# Benchmarking
frame-benchmarking     = { workspace = true, features = ["std"] }
frame-benchmarking-cli = { workspace = true }

# Runtime tests
try-runtime-cli = { workspace = true, optional = true }

[features]
default = []
runtime-benchmarks = [
  "frame-benchmarking-cli/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kestrel-runtime/runtime-benchmarks",
  "runtime-common/runtime-benchmarks",
  "sc-service/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-system/try-runtime",
  "kestrel-runtime/try-runtime",
  "pallet-transaction-payment/try-runtime",
  "runtime-common/try-runtime",
  "try-runtime-cli",
  "try-runtime-cli/try-runtime",
]
