[package]
authors = ["KILT <info@kilt.io>"]
description = "Enables adding and revoking attestations."
edition = "2021"
name = "attestation"
repository = "https://github.com/KILTprotocol/kilt-node"
version = "1.7.2"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = {git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

[dev-dependencies]
ctype = {features = ["mock"], path = "../ctype"}
kilt-support = {features = ["mock"], path = "../../support"}

pallet-balances = { git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
serde = "1.0.144"
sp-core = { git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-io = { git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-keystore = { git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

[dependencies]
codec = {package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"]}
log = "0.4.17"
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
serde = {version = "1.0.144", optional = true}

# Internal dependencies
ctype = {default-features = false, path = "../ctype"}
kilt-support = {default-features = false, path = "../../support"}

#External dependencies
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-keystore = { default-features = false, git = "https://github.com/paritytech/substrate", optional = true, rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "dc22e48e1da70b84fb7b8a1ffc2076cf1b6e1d99" }

[features]
default = ["std"]
mock = [
  "pallet-balances",
  "serde",
  "sp-core",
  "sp-io",
  "sp-keystore",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-core",
]
std = [
  "codec/std",
  "ctype/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
]
