[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "attestation"
description = "Enables adding and revoking attestations."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
ctype = {workspace = true, features = ["mock"]}
kilt-support = {workspace = true, features = ["mock", "try-runtime"]}

pallet-balances = {workspace = true, features = ["std"]}
serde.workspace = true
sp-core = {workspace = true, features = ["std"]}
sp-io = {workspace = true, features = ["std"]}
sp-keystore = {workspace = true, features = ["std"]}

[dependencies]
# External dependencies
parity-scale-codec = {workspace = true, features = ["derive"]}
log.workspace = true
scale-info = {workspace = true, features = ["derive"]}

# Internal dependencies
ctype.workspace = true
kilt-support.workspace = true

#External dependencies
frame-benchmarking = {workspace = true, optional = true}
frame-support.workspace = true
frame-system.workspace = true
pallet-balances = {workspace = true, optional = true}
sp-core = {workspace = true, optional = true}
sp-io = {workspace = true, optional = true}
sp-keystore = {workspace = true, optional = true}
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
mock = [
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-keystore",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-core",
  "sp-runtime/runtime-benchmarks"
]
std = [
  "parity-scale-codec/std",
  "ctype/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "kilt-support/try-runtime"
]
