[package]
authors = ["PureStake"]
edition = "2018"
name = "pallet-author-filter"
version = "0.1.0"

[dependencies]
log = { version = "0.4", default-features = false }
parachain-staking = { path = "../parachain-staking", default-features = false }
parity-scale-codec = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-v1" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
author-inherent = { path = "../author-inherent", default-features = false }
cumulus-pallet-parachain-system = {  git = "https://github.com/paritytech/cumulus", default-features = false, branch = "rococo-v1" }
primitive-types = {version = "0.9.0", default-features = false, features = ["byteorder"]}

[features]
default = ["std"]
std = [
  "log/std",
  "serde",
  "parity-scale-codec/std",
  "frame-support/std",
  "frame-system/std",
  "author-inherent/std",
  "sp-core/std",
  "sp-runtime/std",
  "cumulus-pallet-parachain-system/std",
  "sp-std/std",
  "parachain-staking/std",
]
