[package]
authors = ["KILT <info@kilt.io>"]
description = "Substrate pallet allowing crowdloan contributors to claim their rewards."
edition = "2018"
name = "kilt-crowdloan"
repository = "https://github.com/KILTprotocol/mashnet-node"
version = "0.26.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder-runner = {version = "3.0.0"}

[dev-dependencies]
kilt-primitives = {default-features = false, path = "../../primitives"}
pallet-balances = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}
serde = {version = "1.0.101"}

[dependencies]
serde = {optional = true, version = "1.0.101"}

# Internal dependencies
kilt-primitives = {default-features = false, optional = true, path = "../../primitives"}

# Substrate dependencies
codec = {default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0"}
frame-benchmarking = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
frame-support = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.10", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]

runtime-benchmarks = [
  "frame-benchmarking",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-primitives/std",
  "sp-runtime/std",
  "sp-std/std",
]

try-runtime = [
  "frame-support/try-runtime",
]
