[package]
authors = ["KILT <info@kilt.io>"]
description = "Substrate pallet allowing to register crowdloan contributors."
edition = "2018"
name = "crowdloan"
repository = "https://github.com/KILTprotocol/mashnet-node"
version = "1.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder-runner = {version = "3.0.0"}

[dev-dependencies]
serde = {version = "1.0.124"}

kilt-primitives = {default-features = false, path = "../../primitives"}

pallet-balances = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
pallet-vesting = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-keystore = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}


[dependencies]
serde = {optional = true, version = "1.0.124"}

codec = {default-features = false, features = ["derive"], package = "parity-scale-codec", version = "2.0.0"}
scale-info = {version = "1.0", default-features = false, features = ["derive"]}

# Substrate dependencies
frame-benchmarking = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate", optional = true}
frame-support = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
frame-system = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-runtime = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}
sp-std = {branch = "polkadot-v0.9.12", default-features = false, git = "https://github.com/paritytech/substrate"}

[features]
default = ["std"]

runtime-benchmarks = [
  "frame-benchmarking",
]

std = [
  "codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-std/std",
]

try-runtime = [
  "frame-support/try-runtime",
]
