cargo-features = ["workspace-inheritance"]

[package]
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
name = "delegation"
description = "Enables creating and revoking root nodes of delegation hierarchies; adding and revoking delegation nodes based on root nodes."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder.workspace = true

[dev-dependencies]
attestation = {features = ["mock"], path = "../attestation"}
ctype = {features = ["mock"], path = "../ctype"}
kilt-support = {features = ["mock"], path = "../../support"}

# Substrate dependencies
pallet-balances = {workspace = true, features = ["std"]}
sp-core = {workspace = true, features = ["std"]}
sp-keystore = {workspace = true, features = ["std"]}

[dependencies]
# Internal dependencies
attestation = {default-features = false, path = "../attestation"}
ctype = {default-features = false, path = "../ctype"}
kilt-support = {default-features = false, path = "../../support"}
public-credentials = {default-features = false, path = "../public-credentials"}

# External dependencies
bitflags.workspace = true
codec = {package = "parity-scale-codec", workspace = true, features = ["derive"]}
log.workspace = true
scale-info = {workspace = true, features = ["derive"]}

# Substrate dependencies
frame-benchmarking = {workspace = true, optional = true}
frame-support.workspace = true
frame-system.workspace = true
pallet-balances = {workspace = true, optional = true}
sp-core = {workspace = true, optional = true}
sp-io = {workspace = true, optional = true}
sp-keystore = {workspace = true, optional = true}
sp-runtime.workspace = true
sp-std.workspace = true

[features]
default = ["std"]
mock = [
  "pallet-balances",
  "sp-core",
  "sp-io",
  "sp-keystore",
  "kilt-support/mock",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "kilt-support/runtime-benchmarks",
  "sp-core",
  "sp-io",
]
std = [
  "attestation/std",
  "codec/std",
  "ctype/std",
  "frame-support/std",
  "frame-system/std",
  "kilt-support/std",
  "log/std",
  "pallet-balances/std",
  "public-credentials/std",
  "scale-info/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "kilt-support/try-runtime",
]
